[MessageList] Fix overflow

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -500,7 +500,8 @@ a {
 }
 
 .message-img {
-  width: 500px;
+  width: 50vw;
+  max-width: 500px;
 }
 
 .message-like {
@@ -789,7 +790,8 @@ textarea {
 
   .giftcard-single {
     align-self: center;
-    width: 33%;
+    width: 20vh;
+    max-width: 146px;
     text-align: center;
   }
 
